[package]
name = "async-waitgroup"
description = "Golang like WaitGroup implementation that supports both sync and async Rust"
version = "0.1.0"
authors = ["Shaolong Chen <shaolong.chen@outlook.it>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maolonglong/async-waitgroup"
edition = "2021"

[dependencies]
event-listener = { version = "4.0.0", default-features = false }
event-listener-strategy = { version = "0.4.0", default-features = false }
futures-core = { version = "0.3.5", default-features = false }
pin-project-lite = "0.2.11"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros"] }

[features]
default = ["std"]
std = ["event-listener/std", "event-listener-strategy/std"]
