[package]
name = "async-waitgroup"
description = "Golang like WaitGroup implementation that supports both sync and async Rust"
version = "0.1.2"
authors = ["Shaolong Chen <shaolong.chen@outlook.it>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/maolonglong/async-waitgroup"
homepage = "https://github.com/maolonglong/async-waitgroup"
documentation = "https://docs.rs/async-waitgroup"
edition = "2021"
categories = ["asynchronous", "concurrency"]
keywords = ["atomic", "sync", "async", "waitgroup", "futures"]

[dependencies]
event-listener = { version = "4.0.0", default-features = false }
event-listener-strategy = { version = "0.5.0", default-features = false }
futures-core = { version = "0.3.5", default-features = false }
pin-project-lite = "0.2.11"

[dev-dependencies]
futures-util = "0.3"
pin-utils = "0.1"
tokio = { version = "1.35.1", features = ["macros", "rt"] }

[features]
default = ["std"]
std = ["event-listener/std", "event-listener-strategy/std"]
